# intent-verification-ts

./: .gitattributes  Cargo.toml  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
src/: lib.rs
